[package]
name = "emmuoviti-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1.0.197", features = ["derive"] }
femme = "2.2.1"
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
serde_json = "1.0.114"
anyhow = "1.0.80"
actix-cors = "0.7.0"

